tengo listo el diseño de los barcos y el tablero, ahora comienzo la logica del juego

--- a/Battleship-Game/src/Board.css
+++ b/Battleship-Game/src/Board.css
@@ -4,31 +4,28 @@
    align-items: center;
     margin: 20px;
 }
-.board {
-    width: 100%;
-    max-width: 600px;
-    margin: 0 auto;
-    padding: 20px;
-    border: 2px solid #ccc;
-    box-sizing: border-box;
-}
+
 .grid {
     display: grid;
     grid-template-columns: repeat(10, 40px);
     grid-template-rows: repeat(10, 40px);
     gap:2px;
     border: 1px solid #999;
+    margin-bottom: 20px;
    
 }
+
+
 .cell {
     width: 40px;
     height: 40px;
     border: 1px solid #999;
-    background-color: navy
+    background-color: navy;
+    position: relative
 }
 
 .ship {
-    display: inline-block;
+ 
     width: 40px;
     height: 40px;
     background-color: navy;
@@ -36,6 +33,12 @@
     border-radius: 5px;
     box-shadow: 0 0 5px #333;
     cursor: pointer;
+}
+.ship-container {
+    display: flex;
+    gap: 5px;
+    margin: 20px;
+    position: relative;
 }
 .ship.dragging {
     opacity: 0.5;
@@ -46,5 +49,12 @@
     background-color: #ccc;
     border: 1px solid #999;
 }
-
+.hidden-ship {
+    background-color: transparent;
+  }
+  .hidden-ship {
+    background-color: transparent;
+    border: none;
+  }
   
+
