--- a/Battleship-Game/src/index.css
+++ b/Battleship-Game/src/index.css
@@ -5,7 +5,7 @@
 
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
-  background-color: #e92424;
+  background-color: #b0d6e4;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
