falta la logica de la batalla

--- a/Battleship-Game/src/Board.css
+++ b/Battleship-Game/src/Board.css
@@ -1,8 +1,11 @@
+
 .board-container {
     display: flex;
     flex-direction: column;
-   align-items: center;
+    align-items: center;
     margin: 20px;
+    justify-content: space-around;
+    width: 45%;
 }
 
 .grid {
